--- a/src/components/Current.module.css
+++ b/src/components/Current.module.css
@@ -3,7 +3,6 @@
     justify-content: space-evenly;
     align-self: flex-end;
     width: 100%;
-    min-width: 0;
     margin-left: 1rem;
     gap: 0.2rem;
   }
@@ -44,7 +43,6 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    min-width: 0;
     margin-top: auto;
 }
 
