--- a/src/components/WeekAhead.module.css
+++ b/src/components/WeekAhead.module.css
@@ -5,15 +5,12 @@
   gap: 0.3rem;
   margin-left: 0.5rem;
   width: 100%;
-  min-width: 0;
 }
 
 .weekDays {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 0;
-  width: 100%;
 }
 
 .weekday {
